update version update background color on html

--- a/PDFViewer/src/main/assets/pdfjs/web/simple_viewer.html
+++ b/PDFViewer/src/main/assets/pdfjs/web/simple_viewer.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #525659;
+            background-color: #FFFFFFFF;
             display: flex;
             flex-direction: column;
             align-items: center;
